--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     <div class="chip $100" data-value="100" title="Click to add $100 chip">
                         <span class="chip-value">$100</span>
                     </div>
+                    <div class="chip $1000" data-value="1000" title="Click to add $1000 chip">
+                        <span class="chip-value">$1000</span>
+                    </div>
                 </div>
             </div>
             
